--- a/A2/Client/SearchPage/search.html
+++ b/A2/Client/SearchPage/search.html
@@ -26,12 +26,8 @@
         <input type="text" id="city" name="city"><br>
 
         <label for="category">Category:</label>
-        <select id="category" name="category">
-            <option value="">Select a category</option>
-            <option value="1">People</option>
-            <option value="2">Society</option>
-            <option value="3">Nature</option>
-        </select><br>
+        <select id="category" name="category"></select><br>
+        
         <script src="../SearchPage/script.js"></script>
         <script type="module"></script>
         <input type="button" value="Search" onclick="searchFundraisers()">
