--- a/A2/Client/HomePage/index.html
+++ b/A2/Client/HomePage/index.html
@@ -4,26 +4,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Set screen width -->
     <link rel="stylesheet" href="../HomePage/styles.css">
+    <!-- Introduce css style sheets -->
     <title>Nonprofit Crowdfunding Homepage</title>
+    <!-- Set the title of the page -->
 </head>
 
 <body>
     <nav>
         <ul>
             <li><a href="../HomePage/index.html">Home</a></li>
+            <!-- Home page navigation -->
             <li><a href="../SearchPage/search.html">Search</a></li>
+            <!-- Search navigation -->
             <li><a href="../FundraiserPage/fundraiser.html">Fundraiser Details</a></li>
+            <!-- Fundraiser navigation -->
         </ul>
     </nav>
 
-    <section id="org-info">
+    <section id="org-info">     
+        <!-- Home text -->
         <h1>Welcome to Our Nonprofit</h1>
         <p>A fundraiser is an individual or group that seeks funds from the public for a specific reason. Members of the public can donate to any fundraiser they wish.</p>
         <p>This website is a platform to connect them and handle the donation process.</p>
         <h2>Inspiring Story</h2>
         <p>Enthusiastic donors have come together to fund a Hope primary school where children can go to school and receive an education.</p>
-        <h2>Contact Us</h2>
         <p>Email: abc@123.com</p>
         <p>Phone: 12345678</p>
     </section>
@@ -31,9 +37,11 @@
     <section id="active-fundraisers">
         <h2>Active Fundraisers</h2>
         <div id="fundraisers-list"></div>
+        <!-- List of fundraising Events -->
     </section>
 
     <script src="../HomePage/script.js"></script>
+    <!-- Importing JavaScript files -->
 </body>
 
 </html>
